<resources>
    <string name="app_name">PatientApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- change pw screen -->
    <string name="change_pw_id_hint">ID Number</string>
    <string name="change_pw_name_hint">Name</string>
    <string name="change_pw_date_of_birth_hint">Date of birth</string>
    <string name="change_pw_phone_number_hint">Phone number</string>
    <string name="change_pw_city_hint">City</string>
    <string name="change_pw_email_hint">Email</string>
    <string name="change_pw_hint">Change password</string>
    <string name="change_pw_next_btn">Next</string>
    <string name="change_pw_skip_btn">Skip</string>
    <string name="change_pw_upload_photo_tv">Upload Photo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <!-- navigation menu item -->
    <string name="nav_home_item">Home</string>
    <string name="nav_profile_item">Edit Profile</string>
    <string name="nav_appointments_item">Appointments</string>
    <string name="nav_settings_item">Settings</string>
    <string name="nav_logout_item">Log out</string>
    <string name="nav_about_item">About Mowafer</string>

    <!-- appointments screen -->
    <string name="appointments_all">All</string>
    <string name="appointments_pending">Pending</string>
    <string name="appointments_approved">Approved</string>
    <string name="appointments_cancelled">Cancelled</string>
    <string name="login_btn">Sign in</string>
    <string name="login_forget_pw">Forget Password ?</string>
    <string name="login_id_hint">ID Number</string>
    <string name="login_pw_hint">Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="change_password_btn">Change Password</string>
    <string name="toolbar_title">Mowafer</string>
    <string name="success">Success</string>
    <string name="pw_changed">Password changed successfully</string>
    <string name="failure">Failure</string>
    <string name="search_hint">search ..</string>

</resources>
