<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/color_change_pw_shadow"
tools:context="com.example.roma.patientapp.presentation.edit_profile.update_pw.ChangePasswordFragment">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/dp40h"
    android:layout_marginLeft="@dimen/dp20w"
    android:layout_marginRight="@dimen/dp20w"
    android:layout_marginTop="@dimen/dp32h"
    android:background="@color/color_white"
    android:elevation="@dimen/dp20h"
    android:gravity="center_horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll"
        android:layout_marginBottom="@dimen/dp20h"
        android:fillViewport="true"
        android:paddingLeft="@dimen/dp10w"
        android:paddingRight="@dimen/dp10w"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/new_pw_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp38h"
                android:hint="@string/new_password_hint"
                android:textColor="@color/color_change_pw_et"
                android:textColorHint="@color/color_change_pw_hint"
                android:textSize="@dimen/sp16"
                app:backgroundTint="@color/color_change_pw_hint" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/confirm_pw_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5h"
                android:hint="@string/confirm_password_hint"
                android:textColor="@color/color_change_pw_et"
                android:textColorHint="@color/color_change_pw_hint"
                android:textSize="@dimen/sp16"
                app:backgroundTint="@color/color_change_pw_hint" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <View
            android:id="@+id/div"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1h"
            android:layout_marginBottom="14dp"
            android:background="@drawable/line_green" />
        <TextView
            android:id="@+id/change_pw_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp15h"
            android:text="@string/change_password_btn"
            android:textColor="@color/color_change_pw_et"
            android:textSize="@dimen/sp18" />
    </LinearLayout>
</RelativeLayout>
</FrameLayout>



